CICO-39757 fixing issue with checbox visibiility in IOS

--- a/guestweb/common_css/public_ny_v2/theme.less
+++ b/guestweb/common_css/public_ny_v2/theme.less
@@ -204,6 +204,11 @@ a:hover,
     line-height: 1;
 }
 
+.accept-checkbox{
+    -ms-transform: scale(1.5);
+    -webkit-transform: scale(1.5);
+    transform: scale(1.5);
+}
 
 /*----------------- date picker -------------------------*/
 
